--- a/CMSManagementService/package.json
+++ b/CMSManagementService/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "npx nodemon src/index.js"
+    "build": "npm run build",
+    "start": "node src/index.js",
+    "prod-build": "npm run build",
   },
   "author": "Debika Basu",
   "license": "ISC",
