--- a/CMSManagementService/package.json
+++ b/CMSManagementService/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npm run build",
     "start": "node src/index.js",
-    "prod-build": "npm run build",
+    "prod-build": "npm run build"
   },
   "author": "Debika Basu",
   "license": "ISC",
